Lab2Assignment. 2 at middle.

--- a/lab4.html
+++ b/lab4.html
@@ -195,13 +195,13 @@ summary {
 </div>
 
 
-<div id="lab-assignment-2-lab-projects" class="section level1">
-<h1>Lab Assignment 2 (Lab projects?)</h1>
+<div id="lab-2-assignment-lab-projects" class="section level1">
+<h1>Lab 2 Assignment (Lab projects?)</h1>
 <ol style="list-style-type: decimal">
-<li><p>Go though <code>LabAssignment2.pdf</code> <a href="LabAssignment2.pdf">LabAssignment2.pdf</a></p></li>
-<li><p>Download and open <code>LabAssignment2.Rmd</code> <a href="LabAssignment2.Rmd">LabAssignment2.Rmd</a> in RStudio and run codes inside.</p></li>
-<li><p>Download, open <code>LabAssignment2_otg.Rmd</code> <a href="LabAssignment2_otg.Rmd">LabAssignment2_otg.Rmd</a> and save as a new Rmd file for your Lab Assignment submission. Knit this Rmd file to see if you can make a html, pdf or words. You should be able to get a document. If you couldn’t, just use RStudio Cloud or the Binder RStudio in the lab note homepage. Po likes RStudio. Everything you need is on the cloud.</p></li>
-<li><p>Run/add/edit/delete the codes <code>LabAssignment2_otg.Rmd</code> and add/edit/delete some writings. Knit to see how the .pdf looks like.</p></li>
+<li><p>Go though <code>Lab2Assignment.pdf</code> <a href="Lab2Assignment.pdf">Lab2Assignment.pdf</a> (Yup, 2 at middle.)</p></li>
+<li><p>Download and open <code>Lab2Assignment.Rmd</code> <a href="Lab2Assignment.Rmd">Lab2Assignment.Rmd</a> in RStudio and run codes inside.</p></li>
+<li><p>Download, open <code>LabAssignment2_otg.Rmd</code> <a href="Lab2Assignment_otg.Rmd">Lab2Assignment_otg.Rmd</a> and save as a new Rmd file for your Lab Assignment submission. Knit this Rmd file to see if you can make a html, pdf or words. You should be able to get a document. If you couldn’t, just use RStudio Cloud or the Binder RStudio in the lab note homepage. Po likes RStudio. Everything you need is on the cloud.</p></li>
+<li><p>Run/add/edit/delete the codes in your own copy of <code>Lab2Assignment_otg.Rmd</code> and add/edit/delete some writings. Knit to see how the .pdf looks like.</p></li>
 <li><p>Tidy up the codes and writings. Knit and submit!</p></li>
 </ol>
 </div>
